Fix color overlap in <textarea> with selected text

--- a/frontend/css/components/search.css
+++ b/frontend/css/components/search.css
@@ -26,6 +26,11 @@
     resize: none;
 }
 
+.main-text-area::selection {
+    color: var(--main-black-color);
+    background: var(--text-selection-color);
+}
+
 .search-note {
     width: 100%;
     margin: 4px 0;
